[project]
name = "url-shortner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30",
    "requests>=2.34.2",
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/url_shortner"]
